# kraine

./: CMakeLists.txt  LICENSE  README.md
include/glad/: glad.h
include/kraine/: core.h  renderer.h  utils.h
lib/: cglm.lib
resource/: vertex.glsl
resource/assets/: sample.fbx
resource/shader/: vertex.glsl
src/: glad.c  main.c
src/core/: game.c  gamecam.c  gameobj.c  scene.c  transform.c
src/renderer/: camera.c  coords.c  mesh.c  model.c  renderer.h  shader.c  texture.c
src/utils/: files.c
